unpackaged/main/default/objects/Lease_Checklist__c/Lease_Checklist__c.object-meta.xml
<CustomObject>
    <label>Lease Checklist</label>
    <nameField>
        <displayFormat>LC-{0000000}</displayFormat>
        <label>Lease Funding Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>