unpackaged/main/default/objects/Lease_Checklist__c/fields/ACH_Check_Needed__c.field-meta.xml
<CustomField>
    <fullName>ACH_Check_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Check (N)</label>
    <type>Checkbox</type>
</CustomField>