unpackaged/main/default/objects/Lease_Checklist__c/fields/ACH_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>ACH_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Form (C)</label>
    <type>Checkbox</type>
</CustomField>