unpackaged/main/default/objects/Lease_Checklist__c/fields/ACH_Form_Needed__c.field-meta.xml
<CustomField>
    <fullName>ACH_Form_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH Form (N)</label>
    <type>Checkbox</type>
</CustomField>