unpackaged/main/default/objects/Lease_Checklist__c/fields/Auth_for_Payoff_Completed__c.field-meta.xml
<CustomField>
    <fullName>Auth_for_Payoff_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth for Payoff (C)</label>
    <type>Checkbox</type>
</CustomField>