unpackaged/main/default/objects/Lease_Checklist__c/fields/Auth_for_Payoff_Needed__c.field-meta.xml
<CustomField>
    <fullName>Auth_for_Payoff_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auth for Payoff (N)</label>
    <type>Checkbox</type>
</CustomField>