unpackaged/main/default/objects/Lease_Checklist__c/fields/Back_of_Lease_Needed__c.field-meta.xml
<CustomField>
    <fullName>Back_of_Lease_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Back of Lease (N)</label>
    <type>Checkbox</type>
</CustomField>