unpackaged/main/default/objects/Lease_Checklist__c/fields/Back_of_Title_Completed__c.field-meta.xml
<CustomField>
    <fullName>Back_of_Title_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back of Title (C)</label>
    <type>Checkbox</type>
</CustomField>