unpackaged/main/default/objects/Lease_Checklist__c/fields/Bill_of_Sale_Needed__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Sale_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill of Sale (N)</label>
    <type>Checkbox</type>
</CustomField>