unpackaged/main/default/objects/Lease_Checklist__c/fields/Cancelled_Insurance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Insurance_Notes__c</fullName>
    <label>Cancelled Insurance (Notes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>