unpackaged/main/default/objects/Lease_Checklist__c/fields/Corp_LLC_Reso_Completed__c.field-meta.xml
<CustomField>
    <fullName>Corp_LLC_Reso_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corp/LLC Reso (C)</label>
    <type>Checkbox</type>
</CustomField>