unpackaged/main/default/objects/Lease_Checklist__c/fields/Corporate_Guaranty_Needed__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Guaranty_Needed__c</fullName>
    <formula>Opportunity__r.Cross_Corp__c</formula>
    <label>Corporate Guaranty (N)</label>
    <type>Text</type>
</CustomField>