unpackaged/main/default/objects/Lease_Checklist__c/fields/Corporate_Resolution_Completed__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Resolution_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Resolution (C)</label>
    <type>Checkbox</type>
</CustomField>