unpackaged/main/default/objects/Lease_Checklist__c/fields/D_A_Completed__c.field-meta.xml
<CustomField>
    <fullName>D_A_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D &amp; A (C)</label>
    <type>Checkbox</type>
</CustomField>