unpackaged/main/default/objects/Lease_Checklist__c/fields/D_A_Needed__c.field-meta.xml
<CustomField>
    <fullName>D_A_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>D &amp; A (N)</label>
    <type>Checkbox</type>
</CustomField>