unpackaged/main/default/objects/Lease_Checklist__c/fields/Deposit_Check_Needed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Check_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Deposit Check (N)</label>
    <type>Checkbox</type>
</CustomField>