unpackaged/main/default/objects/Lease_Checklist__c/fields/DL_Copy_Completed_3__c.field-meta.xml
<CustomField>
    <fullName>DL_Copy_Completed_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DL Copy (C)</label>
    <type>Checkbox</type>
</CustomField>