unpackaged/main/default/objects/Lease_Checklist__c/fields/DL_Copy_Needed_1__c.field-meta.xml
<CustomField>
    <fullName>DL_Copy_Needed_1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DL Copy (N)</label>
    <type>Checkbox</type>
</CustomField>