unpackaged/main/default/objects/Lease_Checklist__c/fields/ECR_Completed__c.field-meta.xml
<CustomField>
    <fullName>ECR_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECR (C)</label>
    <type>Checkbox</type>
</CustomField>