unpackaged/main/default/objects/Lease_Checklist__c/fields/Equipment_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Approval_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Approval (C)</label>
    <type>Checkbox</type>
</CustomField>