unpackaged/main/default/objects/Lease_Checklist__c/fields/Exhibit_A_Completed__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_A_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibit A (C)</label>
    <type>Checkbox</type>
</CustomField>