unpackaged/main/default/objects/Lease_Checklist__c/fields/FL_101BO_Needed__c.field-meta.xml
<CustomField>
    <fullName>FL_101BO_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL $101BO (N)</label>
    <type>Checkbox</type>
</CustomField>