unpackaged/main/default/objects/Lease_Checklist__c/fields/FL_Title_Ins_Addendum_Needed__c.field-meta.xml
<CustomField>
    <fullName>FL_Title_Ins_Addendum_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL Title Ins Addendum (N)</label>
    <type>Checkbox</type>
</CustomField>