unpackaged/main/default/objects/Lease_Checklist__c/fields/Front_of_Lease_Completed__c.field-meta.xml
<CustomField>
    <fullName>Front_of_Lease_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front of Lease (C)</label>
    <type>Checkbox</type>
</CustomField>