unpackaged/main/default/objects/Lease_Checklist__c/fields/Front_of_Title_Needed__c.field-meta.xml
<CustomField>
    <fullName>Front_of_Title_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front of Title (N)</label>
    <type>Checkbox</type>
</CustomField>