unpackaged/main/default/objects/Lease_Checklist__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <formula>Opportunity__r.Funder__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder</label>
    <type>Text</type>
</CustomField>