unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent__c</fullName>
    <description>This field will capture the insurance agent's name.</description>
    <inlineHelpText>Enter the lessee's agent name.</inlineHelpText>
    <label>Insurance Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>