unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Certificate_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Certificate_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate that an updated certificate has been received.</description>
    <inlineHelpText>Check the box to indicate the updated insurance certificate has been received.</inlineHelpText>
    <label>Insurance Certificate Recieved</label>
    <type>Checkbox</type>
</CustomField>