unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Comments__c</fullName>
    <label>Insurance Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>