unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <description>This field will capture the lessee's Insurance Company.</description>
    <inlineHelpText>This field will capture the lessee's Insurance Company.</inlineHelpText>
    <label>Insurance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>