unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Email__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Email__c</fullName>
    <label>Insurance Email</label>
    <type>Email</type>
</CustomField>