unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiration_Date__c</fullName>
    <description>This field will capture the insurance expiration date.</description>
    <inlineHelpText>This field will capture the insurance expiration date.</inlineHelpText>
    <label>Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>