unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Fax__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Fax__c</fullName>
    <description>This field will capture the fax number for the lessee's Insurance Company or Agent.</description>
    <inlineHelpText>This field will capture the fax number for the lessee's Insurance Company or Agent.</inlineHelpText>
    <label>Insurance Fax</label>
    <type>Phone</type>
</CustomField>