unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance (N)</label>
    <type>Checkbox</type>
</CustomField>