unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Page_Completed__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Page_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Page (C)</label>
    <type>Checkbox</type>
</CustomField>