unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Page_Needed__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Page_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Insurance Page (N)</label>
    <type>Checkbox</type>
</CustomField>