unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Updated_By__c</fullName>
    <description>This field will capture the last user to update an insurance certificate.</description>
    <inlineHelpText>This field will capture the last user to update an insurance certificate.</inlineHelpText>
    <label>Insurance Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>