unpackaged/main/default/objects/Lease_Checklist__c/fields/Insurance_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Updated_Date__c</fullName>
    <description>This field will capture the last date that an insurance certificate was completed.</description>
    <inlineHelpText>This field will capture the last date that an insurance certificate was completed.</inlineHelpText>
    <label>Insurance Updated Date</label>
    <type>DateTime</type>
</CustomField>