unpackaged/main/default/objects/Lease_Checklist__c/fields/Lease_Properties__c.field-meta.xml
<CustomField>
    <fullName>Lease_Properties__c</fullName>
    <label>Lease Properties</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payoff</fullName>
            </value>
            <value>
                <fullName>Private Party</fullName>
            </value>
            <value>
                <fullName>Sale Leaseback</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Titled</fullName>
            </value>
            <value>
                <fullName>Titled / Payoff</fullName>
            </value>
            <value>
                <fullName>Titled / Private Party</fullName>
            </value>
            <value>
                <fullName>Titled / Sale Leaseback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>