unpackaged/main/default/objects/Lease_Checklist__c/fields/Location_Addendum_Completed__c.field-meta.xml
<CustomField>
    <fullName>Location_Addendum_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Addendum (C)</label>
    <type>Checkbox</type>
</CustomField>