unpackaged/main/default/objects/Lease_Checklist__c/fields/Misc_Item_3_Completed__c.field-meta.xml
<CustomField>
    <fullName>Misc_Item_3_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Misc Item #3 (C)</label>
    <type>Checkbox</type>
</CustomField>