unpackaged/main/default/objects/Lease_Checklist__c/fields/NY_Title_Name_Confirmation_C__c.field-meta.xml
<CustomField>
    <fullName>NY_Title_Name_Confirmation_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NY Title Name Confirmation (C)</label>
    <type>Checkbox</type>
</CustomField>