unpackaged/main/default/objects/Lease_Checklist__c/fields/OG_Invoice_Completed__c.field-meta.xml
<CustomField>
    <fullName>OG_Invoice_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OG Invoice (C)</label>
    <type>Checkbox</type>
</CustomField>