unpackaged/main/default/objects/Lease_Checklist__c/fields/Payoff_Letter_Needed__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Letter_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payoff Letter (N)</label>
    <type>Checkbox</type>
</CustomField>