unpackaged/main/default/objects/Lease_Checklist__c/fields/PG_Notarized_Completed_3__c.field-meta.xml
<CustomField>
    <fullName>PG_Notarized_Completed_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG Notarized (C)</label>
    <type>Checkbox</type>
</CustomField>