unpackaged/main/default/objects/Lease_Checklist__c/fields/PG_Notarized_Needed_1__c.field-meta.xml
<CustomField>
    <fullName>PG_Notarized_Needed_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG Notarized (N)</label>
    <type>Checkbox</type>
</CustomField>