unpackaged/main/default/objects/Lease_Checklist__c/fields/PG_Sig_Needed_2__c.field-meta.xml
<CustomField>
    <fullName>PG_Sig_Needed_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG Sig (N)</label>
    <type>Checkbox</type>
</CustomField>