unpackaged/main/default/objects/Lease_Checklist__c/fields/PP_ECR_Needed__c.field-meta.xml
<CustomField>
    <fullName>PP_ECR_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECR (N)</label>
    <type>Checkbox</type>
</CustomField>