unpackaged/main/default/objects/Lease_Checklist__c/fields/PP_Power_of_Attorney_Completed__c.field-meta.xml
<CustomField>
    <fullName>PP_Power_of_Attorney_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power of Attorney (C)</label>
    <type>Checkbox</type>
</CustomField>