unpackaged/main/default/objects/Lease_Checklist__c/fields/Prefund_Doc_Completed__c.field-meta.xml
<CustomField>
    <fullName>Prefund_Doc_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prefund Doc (C)</label>
    <type>Checkbox</type>
</CustomField>