unpackaged/main/default/objects/Lease_Checklist__c/fields/Private_Party_Ack_Completed__c.field-meta.xml
<CustomField>
    <fullName>Private_Party_Ack_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Party Ack (C)</label>
    <type>Checkbox</type>
</CustomField>