unpackaged/main/default/objects/Lease_Checklist__c/fields/Private_Party_Ack_Needed__c.field-meta.xml
<CustomField>
    <fullName>Private_Party_Ack_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Party Ack (N)</label>
    <type>Checkbox</type>
</CustomField>