unpackaged/main/default/objects/Lease_Checklist__c/fields/Rental_Agreement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Agreement (C)</label>
    <type>Checkbox</type>
</CustomField>