unpackaged/main/default/objects/Lease_Checklist__c/fields/Residual_Addendum_Completed__c.field-meta.xml
<CustomField>
    <fullName>Residual_Addendum_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residual Addendum (C)</label>
    <type>Checkbox</type>
</CustomField>