unpackaged/main/default/objects/Lease_Checklist__c/fields/Residual_Addendum_Needed__c.field-meta.xml
<CustomField>
    <fullName>Residual_Addendum_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residual Addendum (N)</label>
    <type>Checkbox</type>
</CustomField>