unpackaged/main/default/objects/Lease_Checklist__c/fields/Schedule_B_Completed__c.field-meta.xml
<CustomField>
    <fullName>Schedule_B_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule B (C)</label>
    <type>Checkbox</type>
</CustomField>