unpackaged/main/default/objects/Lease_Checklist__c/fields/Second_Review__c.field-meta.xml
<CustomField>
    <fullName>Second_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Review</label>
    <type>Checkbox</type>
</CustomField>