unpackaged/main/default/objects/Lease_Checklist__c/fields/Second_Review_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Second_Review_Completed_by__c</fullName>
    <label>Second Review Completed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>