unpackaged/main/default/objects/Lease_Checklist__c/fields/Second_Review_Completed_on__c.field-meta.xml
<CustomField>
    <fullName>Second_Review_Completed_on__c</fullName>
    <label>Second Review Completed on</label>
    <type>DateTime</type>
</CustomField>