unpackaged/main/default/objects/Lease_Checklist__c/fields/Site_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Site_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Inspection (C)</label>
    <type>Checkbox</type>
</CustomField>