unpackaged/main/default/objects/Lease_Checklist__c/fields/Site_Inspection_Needed__c.field-meta.xml
<CustomField>
    <fullName>Site_Inspection_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Inspection (N)</label>
    <type>Checkbox</type>
</CustomField>