unpackaged/main/default/objects/Lease_Checklist__c/fields/Software_Addendum_Completed__c.field-meta.xml
<CustomField>
    <fullName>Software_Addendum_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Software Addendum (C)</label>
    <type>Checkbox</type>
</CustomField>