unpackaged/main/default/objects/Lease_Checklist__c/fields/Title_Audit_Needed__c.field-meta.xml
<CustomField>
    <fullName>Title_Audit_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Audit (N)</label>
    <type>Checkbox</type>
</CustomField>