unpackaged/main/default/objects/Lease_Checklist__c/fields/Titled_Location_Addendum_Completed__c.field-meta.xml
<CustomField>
    <fullName>Titled_Location_Addendum_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Titled Location Addendum (C)</label>
    <type>Checkbox</type>
</CustomField>