unpackaged/main/default/objects/Lease_Checklist__c/fields/Titled_Veh_Guaranty_Needed__c.field-meta.xml
<CustomField>
    <fullName>Titled_Veh_Guaranty_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Titled Veh. Guaranty (N)</label>
    <type>Checkbox</type>
</CustomField>