unpackaged/main/default/objects/Lease_Checklist__c/fields/UCC_Search_Completed__c.field-meta.xml
<CustomField>
    <fullName>UCC_Search_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCC Search (C)</label>
    <type>Checkbox</type>
</CustomField>