unpackaged/main/default/objects/Lease_Checklist__c/fields/Updated_Insurance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Updated_Insurance_Notes__c</fullName>
    <label>Updated Insurance (Notes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>