unpackaged/main/default/objects/Lease_Checklist__c/validationRules/NY_Titled_Deals_Must_Confirm_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>NY_Titled_Deals_Must_Confirm_Name</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Lease_Properties__c, 'Titled')|| 
ISPICKVAL(Lease_Properties__c, 'Titled / Payoff')|| 
ISPICKVAL(Lease_Properties__c, 'Titled / Private Party')|| 
ISPICKVAL(Lease_Properties__c, 'Titled / Sale Leaseback')) &amp;&amp; 
Opportunity__r.Physical_Address_State__c = 'NY' &amp;&amp; 
NY_Title_Name_Confirmation_N__c = FALSE</errorConditionFormula>
    <errorDisplayField>NY_Title_Name_Confirmation_N__c</errorDisplayField>
    <errorMessage>New York Titled deals requires confirmation of their name</errorMessage>
</ValidationRule>