unpackaged/main/default/objects/Lease_Checklist__c/validationRules/Second_Reviewer_must_be_Funder.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Reviewer_must_be_Funder</fullName>
    <active>true</active>
    <errorConditionFormula>($User.Id &lt;&gt; Opportunity__r.Funder__r.Id) &amp;&amp; 
($User.Id &lt;&gt; '00580000003edxL') &amp;&amp; 
($User.Id &lt;&gt; '00580000004Pz0N') &amp;&amp;
($User.Id &lt;&gt; '00580000003edwu') &amp;&amp;
($Profile.Name  &lt;&gt; 'System Administrator') &amp;&amp;
(Second_Review__c = TRUE) &amp;&amp; 
ISCHANGED(Second_Review__c)</errorConditionFormula>
    <errorMessage>The Funder must be the one to mark the 'Second Review' checkbox</errorMessage>
</ValidationRule>